--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".info.CustomApplication"
@@ -23,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SigninActivity"/>
+        <activity android:name=".activity.MainActivity"/>
     </application>
 
 </manifest>
