--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,15 @@
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name">
+        </activity>
+        <activity android:name=".activity.SigninActivity"/>
+        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.NewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SigninActivity"/>
-        <activity android:name=".activity.MainActivity"/>
     </application>
 
 </manifest>
