--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,14 @@
             android:label="@string/app_name">
         </activity>
         <activity android:name=".activity.SigninActivity"/>
-        <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".activity.NewActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.NewActivity">
+
         </activity>
     </application>
 
