add the plain activity and the fragment of the notebook .

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.NewActivity">
-
         </activity>
+        <activity android:name=".activity.NewBookActivity"/>
     </application>
 
 </manifest>
