--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.TranslucentStatus">
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name">
         </activity>
         <activity android:name=".activity.SigninActivity"/>
         <activity android:name=".activity.MainActivity">
-        </activity>
-        <activity android:name=".activity.NewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.NewActivity">
         </activity>
         <activity android:name=".activity.NewBookActivity"
             android:theme="@style/AppTheme"
