--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".info.CustomApplication"
         android:allowBackup="true"
@@ -18,20 +19,18 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity android:name=".activity.SigninActivity"/>
+            android:label="@string/app_name"></activity>
+        <activity android:name=".activity.SigninActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.NewActivity">
-        </activity>
-        <activity android:name=".activity.NewBookActivity"
-            android:theme="@style/AppTheme"
-            />
+        <activity android:name=".activity.EditNoteActivity"></activity>
+        <activity
+            android:name=".activity.EditNoteBookActivity"
+            android:theme="@style/AppTheme" />
         <activity android:name=".activity.DoodleActivity">
 
         </activity>
