--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".info.CustomApplication"
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,14 +20,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/app_name"></activity>
-        <activity android:name=".activity.SigninActivity" />
-        <activity android:name=".activity.MainActivity">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.SigninActivity" />
+        <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.EditNoteActivity"></activity>
         <activity
             android:name=".activity.EditNoteBookActivity"
@@ -34,6 +35,12 @@
         <activity android:name=".activity.DoodleActivity">
 
         </activity>
+
+        <activity
+            android:name=".activity.AlarmActivity"
+            android:launchMode="singleInstance"
+            android:theme="@style/Theme.AppCompat.Light.Dialog.NoTitle"></activity>
+
     </application>
 
 </manifest>
