--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,23 +24,21 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".activity.SigninActivity" />
-        <activity android:name=".activity.MainActivity"></activity>
-        <activity android:name=".activity.EditNoteActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.EditNoteActivity" />
         <activity
             android:name=".activity.EditNoteBookActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activity.DoodleActivity">
-
-        </activity>
-
+        <activity android:name=".activity.DoodleActivity"></activity>
         <activity
             android:name=".activity.AlarmActivity"
             android:launchMode="singleInstance"
-            android:theme="@style/Theme.AppCompat.Light.Dialog.NoTitle"></activity>
+            android:theme="@style/Theme.AppCompat.Light.Dialog.NoTitle" />
 
         <!-- 腾讯sdk接入 -->
         <activity
@@ -60,6 +58,10 @@
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <service
+            android:name=".service.SyncIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
