--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,15 @@
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name">
+        </activity>
+        <activity android:name=".activity.SigninActivity" />
+        <activity android:name=".activity.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SigninActivity" />
-        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.EditNoteActivity" />
         <activity
             android:name=".activity.EditNoteBookActivity"
@@ -60,7 +61,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <service
-            android:name=".service.SyncIntentService"
+            android:name=".service.CloudIntentService"
             android:exported="false" />
     </application>
 
