--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     compile files('libs/mta-sdk-1.6.2.jar')
     compile files('libs/open_sdk_r5509.jar')
     compile files('libs/xUtils-2.6.14.jar')
+    compile files('libs/avoscloud-sns-v3.12.jar')
+    compile project(':richeditor')
 }
