--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,21 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activity.SigninActivity" />
         <activity android:name=".activity.EditNoteActivity" />
         <activity android:name=".activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.EditNoteBookActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activity.DoodleActivity"></activity>
+        <activity android:name=".activity.DoodleActivity" />
         <activity
             android:name=".activity.AlarmActivity"
             android:launchMode="singleInstance"
@@ -61,6 +63,8 @@
         <service
             android:name=".service.CloudIntentService"
             android:exported="false" />
+
+        <activity android:name=".activity.SettingActivity"></activity>
     </application>
 
 </manifest>
